Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -69,7 +69,7 @@ stages:
           - task: AzureRmWebAppDeployment@3
             displayName: 'Azure App Service Deploy'
             inputs:
-              azureSubscription: 'Visual Studio Enterprise'
+              azureSubscription: 'AzureRMSubscription'
               WebAppName: '$(WebsiteName)'
               DeployToSlotFlag: true
               ResourceGroupName: '$(ResourceGroupName)'
@@ -100,7 +100,7 @@ stages:
           - task: AzureRmWebAppDeployment@3
             displayName: 'Azure App Service Deploy'
             inputs:
-              azureSubscription: 'Visual Studio Enterprise'
+              azureSubscription: 'AzureRMSubscription'
               WebAppName: '$(WebsiteName)'
               DeployToSlotFlag: true
               ResourceGroupName: '$(ResourceGroupName)'
@@ -132,7 +132,7 @@ stages:
           - task: AzureRmWebAppDeployment@3
             displayName: 'Azure App Service Deploy'
             inputs:
-              azureSubscription: 'AzureRMsubscription'
+              azureSubscription: 'AzureRMSubscription'
               WebAppName: '$(WebsiteName)'
               Package: '$(build.artifactstagingdirectory)/**/PartsUnlimitedWebsite.zip'
           
